--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,16 @@
+body, html {
+    -ms-touch-action: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-drag: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+}
+
 .row-fluid {
     text-align: center;
     padding-bottom: 40px;
@@ -11,5 +24,5 @@
     width: 100px;
     height: 90px;
     -webkit-border-radius: 45px;
-    border-radius: 45px
+    border-radius: 45px;
 }
