--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,15 +9,36 @@ body, html {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -webkit-text-size-adjust: none;
     -ms-text-size-adjust: none;
+    height: 100%;
+    width: 100%;
+    background: url('../img/debut_dark.png') repeat;
+}
+
+.background-gradient {
+    background: rgb(242,242,242); /* Old browsers */
+    background: -moz-linear-gradient(left, rgba(242,242,242,1) 0%, rgba(232,232,232,1) 20%, rgba(214,214,214,1) 50%, rgba(232,232,232,1) 80%, rgba(242,242,242,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(242,242,242,1)), color-stop(20%,rgba(232,232,232,1)), color-stop(50%,rgba(214,214,214,1)), color-stop(80%,rgba(232,232,232,1)), color-stop(100%,rgba(242,242,242,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgba(242,242,242,1) 0%,rgba(232,232,232,1) 20%,rgba(214,214,214,1) 50%,rgba(232,232,232,1) 80%,rgba(242,242,242,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, rgba(242,242,242,1) 0%,rgba(232,232,232,1) 20%,rgba(214,214,214,1) 50%,rgba(232,232,232,1) 80%,rgba(242,242,242,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgba(242,242,242,1) 0%,rgba(232,232,232,1) 20%,rgba(214,214,214,1) 50%,rgba(232,232,232,1) 80%,rgba(242,242,242,1) 100%); /* IE10+ */
+    background: linear-gradient(to right, rgba(242,242,242,1) 0%,rgba(232,232,232,1) 20%,rgba(214,214,214,1) 50%,rgba(232,232,232,1) 80%,rgba(242,242,242,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#f2f2f2',GradientType=1 ); /* IE6-9 */
+}
+
+.silver-gradient {
+    background: rgb(196,196,196); /* Old browsers */
+    background: -moz-linear-gradient(left, rgba(196,196,196,1) 0%, rgba(229,229,229,1) 30%, rgba(234,234,234,1) 47%, rgba(229,229,229,1) 58%, rgba(175,175,175,1) 87%, rgba(135,135,135,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(196,196,196,1)), color-stop(30%,rgba(229,229,229,1)), color-stop(47%,rgba(234,234,234,1)), color-stop(58%,rgba(229,229,229,1)), color-stop(87%,rgba(175,175,175,1)), color-stop(100%,rgba(135,135,135,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgba(196,196,196,1) 0%,rgba(229,229,229,1) 30%,rgba(234,234,234,1) 47%,rgba(229,229,229,1) 58%,rgba(175,175,175,1) 87%,rgba(135,135,135,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, rgba(196,196,196,1) 0%,rgba(229,229,229,1) 30%,rgba(234,234,234,1) 47%,rgba(229,229,229,1) 58%,rgba(175,175,175,1) 87%,rgba(135,135,135,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgba(196,196,196,1) 0%,rgba(229,229,229,1) 30%,rgba(234,234,234,1) 47%,rgba(229,229,229,1) 58%,rgba(175,175,175,1) 87%,rgba(135,135,135,1) 100%); /* IE10+ */
+    background: linear-gradient(to right, rgba(196,196,196,1) 0%,rgba(229,229,229,1) 30%,rgba(234,234,234,1) 47%,rgba(229,229,229,1) 58%,rgba(175,175,175,1) 87%,rgba(135,135,135,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c4c4c4', endColorstr='#878787',GradientType=1 ); /* IE6-9 */
 }
 
 .row-fluid {
     text-align: center;
-    padding-bottom: 40px;
-}
-
-.top-row {
-    padding: 40px 0 100px 0;
+    padding-bottom: 30px;
 }
 
 .btn {
@@ -25,4 +46,99 @@ body, html {
     height: 90px;
     -webkit-border-radius: 45px;
     border-radius: 45px;
+}
+
+.btn-mute {
+    margin-top: 11px;
+    width: 75px;
+    height: 67.5px;
+}
+
+.top-border-radius {
+    -webkit-border-top-left-radius: 50px;
+    -webkit-border-top-right-radius: 50px;
+    -moz-border-radius-topleft: 50px;
+    -moz-border-radius-topright: 50px;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+}
+
+.container {
+    margin-top: 30px;
+    position: relative;
+    border-top: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+    border-left: 1px solid #aaa;
+    width: 500px;
+    min-height: 100%;
+    box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.2),
+                -5px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.top-controls {
+    padding-top: 60px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.media-controls {
+    padding-top: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+}
+
+.fullscreen {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:1000;
+}
+
+.touch-pad {
+    display: none;
+    background: #eee;
+}
+
+.keyboard {
+    display: none;
+    background: #eee;
+    text-align: center;
+}
+
+.keyboard .input-wrapper {
+    position: absolute;
+    text-align: center;
+    top: 45px;
+    width: 100%;
+    padding-top: 30px;
+}
+
+.keyboard input:focus {
+    outline: none;
+}
+
+.keyboard input {
+    width: 100px;
+    background: #eee;
+    border: 3px dashed #444;
+    outline: none;
+    box-shadow: none;
+    text-align: center;
+    height: 100px;
+    font-size: 40px;
+}
+
+.button-close:hover {
+    cursor: pointer;
+}
+
+.button-close {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    z-index: 999999;
 }
